src/libdrakvuf/libdrakvuf.h

typedef enum proc_type
{
    PROC_TYPE_UNKNOWN = 0,
    PROC_TYPE_32      = 32,
    PROC_TYPE_64      = 64,
} proc_type_t;
typedef struct process_data
{
    const char* name;   /* Process name */
    vmi_pid_t pid ;     /* Process pid */
    vmi_pid_t ppid ;    /* Process parent pid */
    addr_t base_addr ;  /* Process base address */
    int64_t userid ;    /* Process SessionID/UID */
    uint32_t tid ;      /* Thread Id for Linux & Windows*/
    proc_type_t bitness;/* Process bitness 32/64 */
} proc_data_t ;
typedef struct drakvuf* drakvuf_t;
typedef struct drakvuf_trap drakvuf_trap_t;
typedef struct drakvuf_trap_info
{
    gint64 timestamp;
    unsigned int vcpu;
    uint16_t altp2m_idx;
    proc_data_t proc_data ; /* Current owning process data */
    proc_data_t attached_proc_data ; /* Current attached process data */
    addr_t trap_pa;
    x86_registers_t* regs;
    drakvuf_trap_t* trap;
    uint64_t event_uid; /* Unique sequential event identifier */
    union
    {
        const cpuid_event_t* cpuid; /* For CPUID traps */
        const debug_event_t* debug; /* For DEBUG traps */
        const reg_event_t*   reg;   /* For MSR traps */
        const io_event_t*    io;    /* For I/O traps */
    };
} drakvuf_trap_info_t;
addr_t drakvuf_get_obj_by_handle(drakvuf_t drakvuf,
    addr_t process,
    uint64_t handle) NOEXCEPT;
os_t drakvuf_get_os_type(drakvuf_t drakvuf) NOEXCEPT;
page_mode_t drakvuf_get_page_mode(drakvuf_t drakvuf) NOEXCEPT;
size_t drakvuf_get_address_width(drakvuf_t drakvuf) NOEXCEPT;
addr_t drakvuf_get_kernel_base(drakvuf_t drakvuf) NOEXCEPT;
addr_t drakvuf_get_current_process(drakvuf_t drakvuf,
    drakvuf_trap_info_t* info) NOEXCEPT;
addr_t drakvuf_get_current_attached_process(drakvuf_t drakvuf,
    drakvuf_trap_info_t* info) NOEXCEPT;
addr_t drakvuf_get_current_thread(drakvuf_t drakvuf,
    drakvuf_trap_info_t* info) NOEXCEPT;
addr_t drakvuf_get_current_thread_teb(drakvuf_t drakvuf,
    drakvuf_trap_info_t* info) NOEXCEPT;
addr_t drakvuf_get_current_thread_stackbase(drakvuf_t drakvuf,
    drakvuf_trap_info_t* info) NOEXCEPT;
bool drakvuf_get_last_error(drakvuf_t drakvuf,
    drakvuf_trap_info_t* info,
    uint32_t* err,
    const char** err_str) NOEXCEPT;
/* Caller must free the returned string */
char* drakvuf_get_process_name(drakvuf_t drakvuf,
    addr_t process_base,
    bool fullpath) NOEXCEPT;
/* Caller must free the returned string */
char* drakvuf_get_process_commandline(drakvuf_t drakvuf,
    drakvuf_trap_info_t* info,
    addr_t process_base) NOEXCEPT;
bool drakvuf_get_process_pid(drakvuf_t drakvuf,
    addr_t process_base,
    vmi_pid_t* pid) NOEXCEPT;
bool drakvuf_get_process_thread_id( drakvuf_t drakvuf,
    addr_t process_base,
    uint32_t* pid) NOEXCEPT;
bool drakvuf_get_process_dtb(drakvuf_t drakvuf,
    addr_t process_base,
    addr_t* dtb) NOEXCEPT;
/* Process userid or -1 on error */
int64_t drakvuf_get_process_userid(drakvuf_t drakvuf,
    addr_t process_base) NOEXCEPT;
unicode_string_t* drakvuf_get_process_csdversion(drakvuf_t drakvuf,
    addr_t process_base) NOEXCEPT;
bool drakvuf_get_process_data(drakvuf_t drakvuf,
    addr_t process_base,
    proc_data_t* proc_data) NOEXCEPT;
typedef struct _mmvad_info
{
    uint64_t starting_vpn;
    uint64_t ending_vpn;
    uint64_t flags;
    uint64_t flags1;

    /* Pointer to the file name, if this MMVAD is backed by some file on disk.
     * If not null, read with: drakvuf_read_unicode_va(drakvuf, mmvad->file_name_ptr, 0) */
    addr_t file_name_ptr;
    uint32_t total_number_of_ptes;
    addr_t prototype_pte;
    addr_t node_addr;
} mmvad_info_t;
typedef bool (*mmvad_callback)(drakvuf_t drakvuf, mmvad_info_t* mmvad, void* callback_data);
bool drakvuf_find_mmvad(drakvuf_t drakvuf, addr_t eprocess, addr_t vaddr, mmvad_info_t* out_mmvad) NOEXCEPT;
bool drakvuf_traverse_mmvad(drakvuf_t drakvuf, addr_t eprocess, mmvad_callback callback, void* callback_data) NOEXCEPT;
bool drakvuf_is_mmvad_commited(drakvuf_t drakvuf, mmvad_info_t* mmvad) NOEXCEPT;
uint32_t drakvuf_mmvad_type(drakvuf_t drakvuf, mmvad_info_t* mmvad);
uint64_t drakvuf_mmvad_commit_charge(drakvuf_t drakvuf, mmvad_info_t* mmvad, uint64_t* width) NOEXCEPT;
addr_t drakvuf_get_wow_peb(drakvuf_t drakvuf, access_context_t* ctx, addr_t eprocess) NOEXCEPT;
bool drakvuf_get_wow_context(drakvuf_t drakvuf, addr_t ethread, addr_t* wow_ctx) NOEXCEPT;
bool drakvuf_get_user_stack32(drakvuf_t drakvuf, drakvuf_trap_info_t* info, addr_t* stack_ptr, addr_t* frame_ptr);
bool drakvuf_get_user_stack64(drakvuf_t drakvuf, drakvuf_trap_info_t* info, addr_t* stack_ptr) NOEXCEPT;
bool drakvuf_get_current_thread_id(drakvuf_t drakvuf,
    drakvuf_trap_info_t* info,
    uint32_t* thread_id) NOEXCEPT;
addr_t drakvuf_exportksym_to_va(drakvuf_t drakvuf,
    const vmi_pid_t pid, const char* proc_name,
    const char* mod_name, addr_t rva) NOEXCEPT;
addr_t drakvuf_exportsym_to_va(drakvuf_t drakvuf, addr_t process_addr,
    const char* module, const char* sym) NOEXCEPT;
addr_t drakvuf_export_lib_address(drakvuf_t drakvuf, addr_t process_addr, const char* lib) NOEXCEPT;