src/librepl/libdrakvuf.py


# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 379
if _libs["repl"].has("drakvuf_get_obj_by_handle", "cdecl"):
    drakvuf_get_obj_by_handle = _libs["repl"].get("drakvuf_get_obj_by_handle", "cdecl")
    drakvuf_get_obj_by_handle.argtypes = [drakvuf_t, addr_t, c_uint64]
    drakvuf_get_obj_by_handle.restype = addr_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 383
if _libs["repl"].has("drakvuf_get_os_type", "cdecl"):
    drakvuf_get_os_type = _libs["repl"].get("drakvuf_get_os_type", "cdecl")
    drakvuf_get_os_type.argtypes = [drakvuf_t]
    drakvuf_get_os_type.restype = os_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 384
if _libs["repl"].has("drakvuf_get_page_mode", "cdecl"):
    drakvuf_get_page_mode = _libs["repl"].get("drakvuf_get_page_mode", "cdecl")
    drakvuf_get_page_mode.argtypes = [drakvuf_t]
    drakvuf_get_page_mode.restype = page_mode_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 385
if _libs["repl"].has("drakvuf_get_address_width", "cdecl"):
    drakvuf_get_address_width = _libs["repl"].get("drakvuf_get_address_width", "cdecl")
    drakvuf_get_address_width.argtypes = [drakvuf_t]
    drakvuf_get_address_width.restype = c_int

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 387
if _libs["repl"].has("drakvuf_get_kernel_base", "cdecl"):
    drakvuf_get_kernel_base = _libs["repl"].get("drakvuf_get_kernel_base", "cdecl")
    drakvuf_get_kernel_base.argtypes = [drakvuf_t]
    drakvuf_get_kernel_base.restype = addr_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 389
if _libs["repl"].has("drakvuf_get_current_process", "cdecl"):
    drakvuf_get_current_process = _libs["repl"].get("drakvuf_get_current_process", "cdecl")
    drakvuf_get_current_process.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t)]
    drakvuf_get_current_process.restype = addr_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 392
if _libs["repl"].has("drakvuf_get_current_attached_process", "cdecl"):
    drakvuf_get_current_attached_process = _libs["repl"].get("drakvuf_get_current_attached_process", "cdecl")
    drakvuf_get_current_attached_process.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t)]
    drakvuf_get_current_attached_process.restype = addr_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 395
if _libs["repl"].has("drakvuf_get_current_thread", "cdecl"):
    drakvuf_get_current_thread = _libs["repl"].get("drakvuf_get_current_thread", "cdecl")
    drakvuf_get_current_thread.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t)]
    drakvuf_get_current_thread.restype = addr_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 398
if _libs["repl"].has("drakvuf_get_current_thread_teb", "cdecl"):
    drakvuf_get_current_thread_teb = _libs["repl"].get("drakvuf_get_current_thread_teb", "cdecl")
    drakvuf_get_current_thread_teb.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t)]
    drakvuf_get_current_thread_teb.restype = addr_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 401
if _libs["repl"].has("drakvuf_get_current_thread_stackbase", "cdecl"):
    drakvuf_get_current_thread_stackbase = _libs["repl"].get("drakvuf_get_current_thread_stackbase", "cdecl")
    drakvuf_get_current_thread_stackbase.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t)]
    drakvuf_get_current_thread_stackbase.restype = addr_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 404
if _libs["repl"].has("drakvuf_get_last_error", "cdecl"):
    drakvuf_get_last_error = _libs["repl"].get("drakvuf_get_last_error", "cdecl")
    drakvuf_get_last_error.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), POINTER(c_uint32), POINTER(POINTER(c_char))]
    drakvuf_get_last_error.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 410
if _libs["repl"].has("drakvuf_get_process_name", "cdecl"):
    drakvuf_get_process_name = _libs["repl"].get("drakvuf_get_process_name", "cdecl")
    drakvuf_get_process_name.argtypes = [drakvuf_t, addr_t, c_bool]
    if sizeof(c_int) == sizeof(c_void_p):
        drakvuf_get_process_name.restype = ReturnString
    else:
        drakvuf_get_process_name.restype = String
        drakvuf_get_process_name.errcheck = ReturnString

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 415
if _libs["repl"].has("drakvuf_get_process_commandline", "cdecl"):
    drakvuf_get_process_commandline = _libs["repl"].get("drakvuf_get_process_commandline", "cdecl")
    drakvuf_get_process_commandline.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), addr_t]
    if sizeof(c_int) == sizeof(c_void_p):
        drakvuf_get_process_commandline.restype = ReturnString
    else:
        drakvuf_get_process_commandline.restype = String
        drakvuf_get_process_commandline.errcheck = ReturnString

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 419
if _libs["repl"].has("drakvuf_get_process_pid", "cdecl"):
    drakvuf_get_process_pid = _libs["repl"].get("drakvuf_get_process_pid", "cdecl")
    drakvuf_get_process_pid.argtypes = [drakvuf_t, addr_t, POINTER(vmi_pid_t)]
    drakvuf_get_process_pid.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 423
if _libs["repl"].has("drakvuf_get_process_thread_id", "cdecl"):
    drakvuf_get_process_thread_id = _libs["repl"].get("drakvuf_get_process_thread_id", "cdecl")
    drakvuf_get_process_thread_id.argtypes = [drakvuf_t, addr_t, POINTER(c_uint32)]
    drakvuf_get_process_thread_id.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 427
if _libs["repl"].has("drakvuf_get_process_dtb", "cdecl"):
    drakvuf_get_process_dtb = _libs["repl"].get("drakvuf_get_process_dtb", "cdecl")
    drakvuf_get_process_dtb.argtypes = [drakvuf_t, addr_t, POINTER(addr_t)]
    drakvuf_get_process_dtb.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 432
if _libs["repl"].has("drakvuf_get_process_userid", "cdecl"):
    drakvuf_get_process_userid = _libs["repl"].get("drakvuf_get_process_userid", "cdecl")
    drakvuf_get_process_userid.argtypes = [drakvuf_t, addr_t]
    drakvuf_get_process_userid.restype = c_int64

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 435
if _libs["repl"].has("drakvuf_get_process_csdversion", "cdecl"):
    drakvuf_get_process_csdversion = _libs["repl"].get("drakvuf_get_process_csdversion", "cdecl")
    drakvuf_get_process_csdversion.argtypes = [drakvuf_t, addr_t]
    drakvuf_get_process_csdversion.restype = POINTER(unicode_string_t)

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 438
if _libs["repl"].has("drakvuf_get_process_data", "cdecl"):
    drakvuf_get_process_data = _libs["repl"].get("drakvuf_get_process_data", "cdecl")
    drakvuf_get_process_data.argtypes = [drakvuf_t, addr_t, POINTER(proc_data_t)]
    drakvuf_get_process_data.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 454
class struct__mmvad_info(Structure):
    pass

struct__mmvad_info.__slots__ = [
    'starting_vpn',
    'ending_vpn',
    'flags',
    'flags1',
    'file_name_ptr',
    'total_number_of_ptes',
    'prototype_pte',
]
struct__mmvad_info._fields_ = [
    ('starting_vpn', c_uint64),
    ('ending_vpn', c_uint64),
    ('flags', c_uint64),
    ('flags1', c_uint64),
    ('file_name_ptr', addr_t),
    ('total_number_of_ptes', c_uint32),
    ('prototype_pte', addr_t),
]

mmvad_info_t = struct__mmvad_info# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 454

mmvad_callback = CFUNCTYPE(UNCHECKED(c_bool), drakvuf_t, POINTER(mmvad_info_t), POINTER(None))# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 456

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 458
if _libs["repl"].has("drakvuf_find_mmvad", "cdecl"):
    drakvuf_find_mmvad = _libs["repl"].get("drakvuf_find_mmvad", "cdecl")
    drakvuf_find_mmvad.argtypes = [drakvuf_t, addr_t, addr_t, POINTER(mmvad_info_t)]
    drakvuf_find_mmvad.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 459
if _libs["repl"].has("drakvuf_traverse_mmvad", "cdecl"):
    drakvuf_traverse_mmvad = _libs["repl"].get("drakvuf_traverse_mmvad", "cdecl")
    drakvuf_traverse_mmvad.argtypes = [drakvuf_t, addr_t, mmvad_callback, POINTER(None)]
    drakvuf_traverse_mmvad.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 460
if _libs["repl"].has("drakvuf_is_mmvad_commited", "cdecl"):
    drakvuf_is_mmvad_commited = _libs["repl"].get("drakvuf_is_mmvad_commited", "cdecl")
    drakvuf_is_mmvad_commited.argtypes = [drakvuf_t, POINTER(mmvad_info_t)]
    drakvuf_is_mmvad_commited.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 461
if _libs["repl"].has("drakvuf_mmvad_type", "cdecl"):
    drakvuf_mmvad_type = _libs["repl"].get("drakvuf_mmvad_type", "cdecl")
    drakvuf_mmvad_type.argtypes = [drakvuf_t, POINTER(mmvad_info_t)]
    drakvuf_mmvad_type.restype = c_uint32

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 462
if _libs["repl"].has("drakvuf_mmvad_commit_charge", "cdecl"):
    drakvuf_mmvad_commit_charge = _libs["repl"].get("drakvuf_mmvad_commit_charge", "cdecl")
    drakvuf_mmvad_commit_charge.argtypes = [drakvuf_t, POINTER(mmvad_info_t), POINTER(c_uint64)]
    drakvuf_mmvad_commit_charge.restype = c_uint64

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 464
if _libs["repl"].has("drakvuf_get_wow_peb", "cdecl"):
    drakvuf_get_wow_peb = _libs["repl"].get("drakvuf_get_wow_peb", "cdecl")
    drakvuf_get_wow_peb.argtypes = [drakvuf_t, POINTER(access_context_t), addr_t]
    drakvuf_get_wow_peb.restype = addr_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 465
if _libs["repl"].has("drakvuf_get_wow_context", "cdecl"):
    drakvuf_get_wow_context = _libs["repl"].get("drakvuf_get_wow_context", "cdecl")
    drakvuf_get_wow_context.argtypes = [drakvuf_t, addr_t, POINTER(addr_t)]
    drakvuf_get_wow_context.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 466
if _libs["repl"].has("drakvuf_get_user_stack32", "cdecl"):
    drakvuf_get_user_stack32 = _libs["repl"].get("drakvuf_get_user_stack32", "cdecl")
    drakvuf_get_user_stack32.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), POINTER(addr_t), POINTER(addr_t)]
    drakvuf_get_user_stack32.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 467
if _libs["repl"].has("drakvuf_get_user_stack64", "cdecl"):
    drakvuf_get_user_stack64 = _libs["repl"].get("drakvuf_get_user_stack64", "cdecl")
    drakvuf_get_user_stack64.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), POINTER(addr_t)]
    drakvuf_get_user_stack64.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 469
if _libs["repl"].has("drakvuf_get_current_thread_id", "cdecl"):
    drakvuf_get_current_thread_id = _libs["repl"].get("drakvuf_get_current_thread_id", "cdecl")
    drakvuf_get_current_thread_id.argtypes = [drakvuf_t, POINTER(drakvuf_trap_info_t), POINTER(c_uint32)]
    drakvuf_get_current_thread_id.restype = c_bool

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 473
if _libs["repl"].has("drakvuf_exportksym_to_va", "cdecl"):
    drakvuf_exportksym_to_va = _libs["repl"].get("drakvuf_exportksym_to_va", "cdecl")
    drakvuf_exportksym_to_va.argtypes = [drakvuf_t, vmi_pid_t, String, String, addr_t]
    drakvuf_exportksym_to_va.restype = addr_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 477
if _libs["repl"].has("drakvuf_exportsym_to_va", "cdecl"):
    drakvuf_exportsym_to_va = _libs["repl"].get("drakvuf_exportsym_to_va", "cdecl")
    drakvuf_exportsym_to_va.argtypes = [drakvuf_t, addr_t, String, String]
    drakvuf_exportsym_to_va.restype = addr_t

# /shared/drakvuf/src/libdrakvuf/libdrakvuf.h: 480
if _libs["repl"].has("drakvuf_export_lib_address", "cdecl"):
    drakvuf_export_lib_address = _libs["repl"].get("drakvuf_export_lib_address", "cdecl")
    drakvuf_export_lib_address.argtypes = [drakvuf_t, addr_t, String]
    drakvuf_export_lib_address.restype = addr_t
